--- a/categories.html
+++ b/categories.html
@@ -164,7 +164,7 @@ https://templatemo.com/tm-576-Wanda X-photography
       <div class="row">
         <div class="col-lg-8 offset-lg-2 header-text" dir="rtl">
           <h2>اكتشف الفئات الأكثر شهرة على <em>Wanda x</em></h2>
-          <p>You are allowed to freely useWanda X Photography Template for your commercial websites. You are not allowed to redistribute the template ZIP file on any other Free CSS websites.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ex sequi commodi dolore pariatur esse doloribus corporis repellendus excepturi architecto rerum, error, eius culpa nam? Quo sed esse rem inventore.</p>
         </div>
       </div>
     </div>
