--- a/contests.html
+++ b/contests.html
@@ -163,7 +163,7 @@ https://templatemo.com/tm-576-Wanda X-photography
       <div class="row">
         <div class="col-lg-8 offset-lg-2 header-text">
           <h2>اكتشف ما يحدث حاليًا في <em>Wanda X</em></h2>
-          <p>When you need Free CSS Templates, you just remember our websiteWaheed wael. We provide you best quality website templates at absolutely free of charge. No hidden cost involved.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe aliquam et magni modi molestiae dolore iusto quasi quo accusantium perferendis consequuntur, cum iste impedit deserunt deleniti ab labore ex aperiam!</p>
         </div>
       </div>
     </div>
