--- a/users.html
+++ b/users.html
@@ -164,7 +164,7 @@ https://templatemo.com/tm-576-Wanda X-photography
       <div class="row">
         <div class="col-lg-8 offset-lg-2 header-text">
           <h2>عرض صور المستخدم و <em>تفاصيل المسابقة</em></h2>
-          <p>If you wish to <a rel="nofollow" href="#" target="_blank">supportWaheed wael</a>, you shall make a little amount of contribution via PayPal. We hope thisWanda X template is useful for your web development. Thank you.</p>
+          <p>Lorem ipsum dolor  <a rel="nofollow" href="#" target="_blank">supportWaheed wael</a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatem reprehenderit possimus recusandae qui. Veritatis soluta sed fugiat harum, voluptatum qui quibusdam excepturi. Officiis deleniti laudantium porro, enim in minima.</p>
         </div>
       </div>
     </div>
