--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ https://templatemo.com/tm-576-Wanda X-photography
         <div class="col-lg-10 offset-lg-1">
           <div class="header-text">
             <h2> أدخل عالمًا من<em> الصور </em> &amp; الجوائز <em>المذهلة</em></h2>
-            <p>Wanda X Photography is a professional website template with 5 different HTML pages for maximum customizations. It is free for commercial usage. This Bootstrap v5.1.3 CSS layout is provided byWaheed wael Free CSS Templates.</p>
+            <p>Wanda X Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam iure itaque cumque est, doloribus illum quo, possimus enim reprehenderit similique animi omnis porro aut, fuga amet. Delectus odit architecto debitis.</p>
             <div class="buttons">
               <div class="big-border-button">
                 <a href="">استكشف مسابقة Wanda Xt</a>
