--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@ https://templatemo.com/tm-576-Wanda X-photography
         <div class="col-lg-12">
           <p>Copyright © 2048 <a href="#">Wanda X</a> Photo Contest Co., Ltd. All rights reserved. 
           
-          Design: <a title="CSS Templates" rel="sponsored" href="https://templatemo.com/page/1" target="_blank">TemplateMo</a></p>
+          Design: <a title="CSS Templates" rel="sponsored" href="#" target="_blank">Wahid</a></p>
         </div>
       </div>
     </div>
