--- a/categories.html
+++ b/categories.html
@@ -244,7 +244,7 @@ https://templatemo.com/tm-576-Wanda X-photography
                 <div class="content">
                   <div class="top-content">
                     <span class="award">Award Price</span>
-                    <span class="price">$1,600</span>
+                    <span class="price">1,600</span>
                   </div>
                   <h4>Walk In The Nature Night</h4>
                   <div class="info">
@@ -267,7 +267,7 @@ https://templatemo.com/tm-576-Wanda X-photography
                 <div class="content">
                   <div class="top-content">
                     <span class="award">Award Price</span>
-                    <span class="price">$3,200</span>
+                    <span class="price">3,200</span>
                   </div>
                   <h4>Walk In The Nature Night</h4>
                   <div class="info">
@@ -290,7 +290,7 @@ https://templatemo.com/tm-576-Wanda X-photography
                 <div class="content">
                   <div class="top-content">
                     <span class="award">Award Price</span>
-                    <span class="price">$4,100</span>
+                    <span class="price">4,100</span>
                   </div>
                   <h4>Walk In The Nature Night</h4>
                   <div class="info">
@@ -313,7 +313,7 @@ https://templatemo.com/tm-576-Wanda X-photography
                 <div class="content">
                   <div class="top-content">
                     <span class="award">Award Price</span>
-                    <span class="price">$3,400</span>
+                    <span class="price">3,400</span>
                   </div>
                   <h4>Walk In The Nature Night</h4>
                   <div class="info">
@@ -336,7 +336,7 @@ https://templatemo.com/tm-576-Wanda X-photography
                 <div class="content">
                   <div class="top-content">
                     <span class="award">Award Price</span>
-                    <span class="price">$2,200</span>
+                    <span class="price">2,200</span>
                   </div>
                   <h4>Walk In The Nature Night</h4>
                   <div class="info">
