--- a/contests.html
+++ b/contests.html
@@ -197,10 +197,10 @@ https://templatemo.com/tm-576-Wanda X-photography
                     <label for="chooseprice" class="form-label">Award Price</label>
                     <select name="Price" class="form-select" aria-label="Default select example" id="chooseCategory" onchange="this.form.click()">
                         <option selected>Choose a price</option>
-                        <option value="500">$500 to $1,000</option>
-                        <option value="1500">$1,500 to $2,000</option>
-                        <option value="2500">$2,500 to $3000</option>
-                        <option value="3500+">$3,500+</option>
+                        <option value="500">500 to 1,000</option>
+                        <option value="1500">1,500 to 2,000</option>
+                        <option value="2500">2,500 to 3000</option>
+                        <option value="3500+">3,500+</option>
                     </select>
                 </fieldset>
               </div>
@@ -353,7 +353,7 @@ https://templatemo.com/tm-576-Wanda X-photography
           <div class="contest-item">
             <div class="top-content">
               <span class="award">Award Price</span>
-              <span class="price">$1,200</span>
+              <span class="price">1,200</span>
             </div>
             <img src="assets/images/contest-01.jpg" alt="">
             <h4>Walk In The Nature Night</h4>
@@ -371,7 +371,7 @@ https://templatemo.com/tm-576-Wanda X-photography
           <div class="contest-item">
             <div class="top-content">
               <span class="award">Award Price</span>
-              <span class="price">$2,400</span>
+              <span class="price">2,400</span>
             </div>
             <img src="assets/images/contest-02.jpg" alt="">
             <h4>Walk In The Nature Night</h4>
@@ -389,7 +389,7 @@ https://templatemo.com/tm-576-Wanda X-photography
           <div class="contest-item">
             <div class="top-content">
               <span class="award">Award Price</span>
-              <span class="price">$3,600</span>
+              <span class="price">3,600</span>
             </div>
             <img src="assets/images/contest-03.jpg" alt="">
             <h4>Walk In The Nature Night</h4>
@@ -407,7 +407,7 @@ https://templatemo.com/tm-576-Wanda X-photography
           <div class="contest-item">
             <div class="top-content">
               <span class="award">Award Price</span>
-              <span class="price">$4,800</span>
+              <span class="price">4,800</span>
             </div>
             <img src="assets/images/contest-04.jpg" alt="">
             <h4>Walk In The Nature Night</h4>
