--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ https://templatemo.com/tm-576-Wanda X-photography
                     <ul>
                       <li><span>Contest Winner:</span> Vincent Adam</li>
                       <li><span>Contest Author:</span> Anthony Soft</li>
-                      <li><span>Awards:</span> $1.000 + Camera Nikon</li>
+                      <li><span>Awards:</span> 1.000 + Camera Nikon</li>
                     </ul>
                   </div>
                 </div>
@@ -212,7 +212,7 @@ https://templatemo.com/tm-576-Wanda X-photography
                     <ul>
                       <li><span>Contest Winner:</span> Thomas Eddy</li>
                       <li><span>Contest Author:</span> Anthony Soft</li>
-                      <li><span>Awards:</span> $1,200 + Canon EOS R7</li>
+                      <li><span>Awards:</span> 1,200 + Canon EOS R7</li>
                     </ul>
                   </div>
                 </div>
@@ -227,7 +227,7 @@ https://templatemo.com/tm-576-Wanda X-photography
                     <ul>
                       <li><span>Contest Winner:</span> Vincent Adam</li>
                       <li><span>Contest Author:</span> Anthony Soft</li>
-                      <li><span>Awards:</span> $1,800 + Canon EOS R6</li>
+                      <li><span>Awards:</span> 1,800 + Canon EOS R6</li>
                     </ul>
                   </div>
                 </div>
@@ -242,7 +242,7 @@ https://templatemo.com/tm-576-Wanda X-photography
                     <ul>
                       <li><span>Contest Winner:</span> Thomas Eddy</li>
                       <li><span>Contest Author:</span> Anthony Soft</li>
-                      <li><span>Awards:</span> $8,400 + Canon EOS R1</li>
+                      <li><span>Awards:</span> 8,400 + Canon EOS R1</li>
                     </ul>
                   </div>
                 </div>
@@ -257,7 +257,7 @@ https://templatemo.com/tm-576-Wanda X-photography
                     <ul>
                       <li><span>Contest Winner:</span> Vincent Adam</li>
                       <li><span>Contest Author:</span> Anthony Soft</li>
-                      <li><span>Awards:</span> $5,500 + Canon EOS R3</li>
+                      <li><span>Awards:</span> 5,500 + Canon EOS R3</li>
                     </ul>
                   </div>
                 </div>
@@ -272,7 +272,7 @@ https://templatemo.com/tm-576-Wanda X-photography
                     <ul>
                       <li><span>Contest Winner:</span> Thomas Eddy</li>
                       <li><span>Contest Author:</span> Anthony Soft</li>
-                      <li><span>Awards:</span> $4,400 + Canon EOS R5</li>
+                      <li><span>Awards:</span> 4,400 + Canon EOS R5</li>
                     </ul>
                   </div>
                 </div>
@@ -287,7 +287,7 @@ https://templatemo.com/tm-576-Wanda X-photography
                     <ul>
                       <li><span>Contest Winner:</span> Vincent Adam</li>
                       <li><span>Contest Author:</span> Anthony Soft</li>
-                      <li><span>Awards:</span> $3,800 + Canon EOS R6</li>
+                      <li><span>Awards:</span> 3,800 + Canon EOS R6</li>
                     </ul>
                   </div>
                 </div>
@@ -302,7 +302,7 @@ https://templatemo.com/tm-576-Wanda X-photography
                     <ul>
                       <li><span>Contest Winner:</span> Vincent Adam</li>
                       <li><span>Contest Author:</span> Anthony Soft</li>
-                      <li><span>Awards:</span> $2,400 + Canon EOS R7</li>
+                      <li><span>Awards:</span> 2,400 + Canon EOS R7</li>
                     </ul>
                   </div>
                 </div>
@@ -317,7 +317,7 @@ https://templatemo.com/tm-576-Wanda X-photography
                     <ul>
                       <li><span>Contest Winner:</span> Vincent Adam</li>
                       <li><span>Contest Author:</span> Anthony Soft</li>
-                      <li><span>Awards:</span> $1,200 + Canon EOS R10</li>
+                      <li><span>Awards:</span> 1,200 + Canon EOS R10</li>
                     </ul>
                   </div>
                 </div>
@@ -448,7 +448,7 @@ https://templatemo.com/tm-576-Wanda X-photography
                 <div class="thumb">
                   <img src="assets/images/closed-01.jpg" alt="">
                   <span class="winner"><em>Winner:</em> Anthony Soft</span>
-                  <span class="price"><em>Award :</em> $1,600</span>
+                  <span class="price"><em>Award :</em> 1,600</span>
                 </div>
                 <div class="down-content">
                   <div class="row">
@@ -467,7 +467,7 @@ https://templatemo.com/tm-576-Wanda X-photography
                 <div class="thumb">
                   <img src="assets/images/closed-02.jpg" alt="">
                   <span class="winner"><em>Winner:</em> Anthony Soft</span>
-                  <span class="price"><em>Award :</em> $4,200</span>
+                  <span class="price"><em>Award :</em> 4,200</span>
                 </div>
                 <div class="down-content">
                   <div class="row">
@@ -486,7 +486,7 @@ https://templatemo.com/tm-576-Wanda X-photography
                 <div class="thumb">
                   <img src="assets/images/closed-03.jpg" alt="">
                   <span class="winner"><em>Winner:</em> Anthony Soft</span>
-                  <span class="price"><em>Award :</em> $3,200</span>
+                  <span class="price"><em>Award :</em> 3,200</span>
                 </div>
                 <div class="down-content">
                   <div class="row">
@@ -531,7 +531,7 @@ https://templatemo.com/tm-576-Wanda X-photography
               <li>Denim Sriracha Kogi</li>
               <li>Digital Photography Awards</li>
             </ul>
-            <span class="price">$25 USD</span>
+            <span class="price">25 E£</span>
             <div class="border-button">
               <a href="#">Choose This Plan</a>
             </div>
@@ -548,7 +548,7 @@ https://templatemo.com/tm-576-Wanda X-photography
               <li>Denim Sriracha Kogi</li>
               <li>Digital Photography Awards</li>
             </ul>
-            <span class="price">$45 USD</span>
+            <span class="price">45 E£</span>
             <div class="border-button">
               <a href="#">Choose This Plan</a>
             </div>
@@ -565,7 +565,7 @@ https://templatemo.com/tm-576-Wanda X-photography
               <li>Denim Sriracha Kogi</li>
               <li>Digital Photography Awards</li>
             </ul>
-            <span class="price">$85 USD</span>
+            <span class="price">85 E£</span>
             <div class="border-button">
               <a href="#">Choose This Plan</a>
             </div>
