--- a/users.html
+++ b/users.html
@@ -164,7 +164,7 @@ https://templatemo.com/tm-576-Wanda X-photography
       <div class="row">
         <div class="col-lg-8 offset-lg-2 header-text">
           <h2>عرض صور المستخدم و <em>تفاصيل المسابقة</em></h2>
-          <p>Lorem ipsum dolor  <a rel="nofollow" href="#" target="_blank">supportWaheed wael</a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatem reprehenderit possimus recusandae qui. Veritatis soluta sed fugiat harum, voluptatum qui quibusdam excepturi. Officiis deleniti laudantium porro, enim in minima.</p>
+          <p>Lorem ipsum dolor  <a rel="nofollow" href="#" target="_blank">supportWaheed wael</a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatem reprehenderit possimus recusandae qui. Veritatis soluta sed fugiat harum, voluptatum qui quibE£am excepturi. Officiis deleniti laudantium porro, enim in minima.</p>
         </div>
       </div>
     </div>
@@ -217,7 +217,7 @@ https://templatemo.com/tm-576-Wanda X-photography
         <div class="col-lg-2 col-sm-6">
           <div class="info">
             <h6>Total Earned</h6>
-            <h4>$68,000</h4>
+            <h4>68,000</h4>
             <span>All Time</span>
           </div>
         </div>
