--- a/contests.html
+++ b/contests.html
@@ -71,99 +71,14 @@ https://templatemo.com/tm-576-Wanda X-photography
   </header>
   <!-- ***** Header Area End ***** -->
 
-  <div id="modal" class="popupContainer" style="display:none;">
-    <div class="popupHeader">
-        <span class="header_title">Login</span>
-        <span class="modal_close"><i class="fa fa-times"></i></span>
-    </div>
-
-    <section class="popupBody">
-        <!-- Social Login -->
-        <div class="social_login">
-            <div class="">
-                <a href="#" class="social_box fb">
-                    <span class="icon"><i class="fab fa-facebook"></i></span>
-                    <span class="icon_title">Connect with Facebook</span>
-
-                </a>
-
-                <a href="#" class="social_box google">
-                    <span class="icon"><i class="fab fa-google-plus"></i></span>
-                    <span class="icon_title">Connect with Google</span>
-                </a>
-            </div>
-
-            <div class="centeredText">
-                <span>Or use your Email address</span>
-            </div>
-
-            <div class="action_btns">
-                <div class="one_half"><a href="#" id="login_form" class="btn">Login</a></div>
-                <div class="one_half last"><a href="#" id="register_form" class="btn">Sign up</a></div>
-            </div>
-        </div>
-
-        <!-- Username & Password Login form -->
-        <div class="user_login">
-            <form action="" method="post">
-                <label>Email / Username</label>
-                <input name="username" type="text" id="username" />
-              <br />
-
-                <label>Password</label>
-                <input name="password" type="password" id="password" />
-              <br />
-
-                <div class="checkbox">
-                    <input id="remember" type="checkbox" />
-                    <label for="remember">Remember me on this computer</label>
-                </div>
-
-                <div class="action_btns">
-                    <div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a></div>
-                    <div class="one_half last"><button type="submit" class="btn btn_red">Login</button></div>
-                </div>
-            </form>
-
-            <a href="#" class="forgot_password">Forgot password?</a>
-        </div>
-
-        <!-- Register Form -->
-        <div class="user_register">
-            <form action="" method="post">
-                <label>Username</label>
-                <input name="username" type="text" id="username" />
-                <br />
-
-                <label>Email Address</label>
-                <input name="email" type="email" id="email" />
-                <br />
-
-                <label>Password</label>
-                <input name="password" type="password" id="password" />
-                <br />
-
-                <div class="checkbox">
-                    <input id="send_updates" type="checkbox" />
-                    <label for="send_updates">Send me occasional email updates</label>
-                </div>
-
-                <div class="action_btns">
-                    <div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a></div>
-                    <div class="one_half last"><button type="submit" class="btn btn_red">Register</button></div>
-                </div>
-            </form>
-        </div>
-        
-    </section>
-  </div>
+ 
 
   <div class="page-heading">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 offset-lg-2 header-text">
           <h2>اكتشف ما يحدث حاليًا في <em>Wanda X</em></h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe aliquam et magni modi molestiae dolore iusto quasi quo accusantium perferendis consequuntur, cum iste impedit deserunt deleniti ab labore ex aperiam!</p>
+          
         </div>
       </div>
     </div>
@@ -177,26 +92,26 @@ https://templatemo.com/tm-576-Wanda X-photography
             <div class="row">
               <div class="col-lg-4">
                 <fieldset>
-                    <label for="contest" class="form-label">Search Any Contest</label>
-                    <input type="text" name="contest" class="searchText" placeholder="Contest Name..." autocomplete="on" required>
+                    <label for="contest" class="form-label">ابحث في أي مسابقة</label>
+                    <input type="text" name="contest" class="searchText" placeholder="اسم المسابقة ..." autocomplete="on" required>
                 </fieldset>
               </div>
               <div class="col-lg-4">
                 <fieldset>
-                    <label for="category" class="form-label">Pick Category</label>
+                    <label for="category" class="form-label">اختر الفئة</label>
                     <select name="category" class="form-select" aria-label="Choose a category" id="category" onchange="this.form.click()">
-                        <option selected>Choose a category</option>
-                        <option type="checkbox" name="Nature" value="Nature">Nature Photography (220 مسابقات)</option>
-                        <option value="Portrait">Portrait Photography (172 مسابقات)</option>
-                        <option value="Space">Space Photography (92 مسابقات)</option>
+                        <option selected>اختر فئة</option>
+                        <option type="checkbox" name="Nature" value="Nature">تصوير الطبيعة(220 مسابقات)</option>
+                        <option value="Portrait">التصوير الفوتوغرافي صورة(172 مسابقات)</option>
+                        <option value="Space">تصوير الفضاء (92 مسابقات)</option>
                     </select>
                 </fieldset>
               </div>
               <div class="col-lg-2">
                 <fieldset>
-                    <label for="chooseprice" class="form-label">Award Price</label>
+                    <label for="chooseprice" class="form-label">سعر الجائزة</label>
                     <select name="Price" class="form-select" aria-label="Default select example" id="chooseCategory" onchange="this.form.click()">
-                        <option selected>Choose a price</option>
+                        <option selected>اختر السعر</option>
                         <option value="500">500 to 1,000</option>
                         <option value="1500">1,500 to 2,000</option>
                         <option value="2500">2,500 to 3000</option>
@@ -206,7 +121,7 @@ https://templatemo.com/tm-576-Wanda X-photography
               </div>
               <div class="col-lg-2">                        
                 <fieldset>
-                    <button class="main-button">Search Now</button>
+                    <button class="main-button">ابحث الآن</button>
                 </fieldset>
               </div>
             </div>
@@ -230,17 +145,17 @@ https://templatemo.com/tm-576-Wanda X-photography
             <div class="thumb">
               <img src="assets/images/photo-video-01.jpg" alt="">
               <div class="top-content">
-                <h4>A Walk In Nature</h4>
+                <h4>نزهة في الطبيعة</h4>
                 <h6><i class="fa fa-eye"></i> 840 | <i class="fa fa-heart"></i> 160</h6>
               </div>
             </div>
             <div class="down-content">
               <div class="row">
                 <div class="col-7">
-                  <h2>Ranked: 1st</h2>
+                  <h2>مرتبة: 1st</h2>
                 </div>
                 <div class="col-5">
-                  <h6>Category: Photos</h6>
+                  <h6>فئة: الصور</h6>
                 </div>
               </div>
             </div>
@@ -254,17 +169,17 @@ https://templatemo.com/tm-576-Wanda X-photography
                 <a href="#" target="_blank"><i class="fa fa-play"></i></a>
               </div>
               <div class="top-content">
-                <h4>Blue Mountain Hill</h4>
+                <h4>هيل بلو ماونتن</h4>
                 <h6><i class="fa fa-eye"></i> 1722 | <i class="fa fa-heart"></i> 320</h6>
               </div>
             </div>
             <div class="down-content">
               <div class="row">
                 <div class="col-7">
-                  <h2>Ranked: 2nd</h2>
+                  <h2>مرتبة: 2nd</h2>
                 </div>
                 <div class="col-5">
-                  <h6>Category: الفيديوهات</h6>
+                  <h6>فئة: الفيديوهات</h6>
                 </div>
               </div>
             </div>
@@ -275,17 +190,17 @@ https://templatemo.com/tm-576-Wanda X-photography
             <div class="thumb">
               <img src="assets/images/photo-video-03.jpg" alt="">
               <div class="top-content">
-                <h4>Underwater Turtle</h4>
+                <h4>سلحفاة تحت الماء</h4>
                 <h6><i class="fa fa-eye"></i> 1436 | <i class="fa fa-heart"></i> 256</h6>
               </div>
             </div>
             <div class="down-content">
               <div class="row">
                 <div class="col-7">
-                  <h2>Ranked: 3rd</h2>
+                  <h2>مرتبة: 3rd</h2>
                 </div>
                 <div class="col-5">
-                  <h6>Category: Photos</h6>
+                  <h6>فئة: الصور</h6>
                 </div>
               </div>
             </div>
@@ -299,17 +214,17 @@ https://templatemo.com/tm-576-Wanda X-photography
                 <a href="#" target="_blank"><i class="fa fa-play"></i></a>
               </div>
               <div class="top-content">
-                <h4>Greeny Place</h4>
+                <h4>مكان جرينى</h4>
                 <h6><i class="fa fa-eye"></i> 1596 | <i class="fa fa-heart"></i> 512</h6>
               </div>
             </div>
             <div class="down-content">
               <div class="row">
                 <div class="col-7">
-                  <h2>Ranked: 4th</h2>
+                  <h2>مرتبة: 4th</h2>
                 </div>
                 <div class="col-5">
-                  <h6>Category: الفيديوهات</h6>
+                  <h6>فئة: الفيديوهات</h6>
                 </div>
               </div>
             </div>
@@ -320,17 +235,17 @@ https://templatemo.com/tm-576-Wanda X-photography
             <div class="thumb">
               <img src="assets/images/photo-video-05.jpg" alt="">
               <div class="top-content">
-                <h4>Rocky Mountain</h4>
+                <h4>جبل صخري</h4>
                 <h6><i class="fa fa-eye"></i> 1596 | <i class="fa fa-heart"></i> 768</h6>
               </div>
             </div>
             <div class="down-content">
               <div class="row">
                 <div class="col-7">
-                  <h2>Ranked: 5th</h2>
+                  <h2>مرتبة: 5th</h2>
                 </div>
                 <div class="col-5">
-                  <h6>Category: Random</h6>
+                  <h6>فئة: عشوائي</h6>
                 </div>
               </div>
             </div>
@@ -352,73 +267,73 @@ https://templatemo.com/tm-576-Wanda X-photography
         <div class="col-lg-3">
           <div class="contest-item">
             <div class="top-content">
-              <span class="award">Award Price</span>
+              <span class="award">سعر الجائزة</span>
               <span class="price">1,200</span>
             </div>
             <img src="assets/images/contest-01.jpg" alt="">
-            <h4>Walk In The Nature Night</h4>
+            <h4>المشي في ليلة الطبيعة</h4>
             <div class="info">
-              <span class="participants"><img src="assets//images/icon-03.png" alt=""><br>80 Participants</span>
-              <span class="submittions"><img src="assets//images/icon-01.png" alt=""><br>260 Submissions</span>
+              <span class="participants"><img src="assets//images/icon-03.png" alt=""><br>80 مشاركون</span>
+              <span class="submittions"><img src="assets//images/icon-01.png" alt=""><br>260 التقديمات</span>
             </div>
-            <div class="border-button">
+            <div class="border-butto">
               <a href="#">تصفح مسابقات صور الطبيعة</a>
             </div>
-            <span class="info">* Client will pay via Online Payments</span>
+            <span class="info">* سيدفع العميل عن طريق المدفوعات عبر الإنترنت</span>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="contest-item">
             <div class="top-content">
-              <span class="award">Award Price</span>
+              <span class="award">سعر الجائزة</span>
               <span class="price">2,400</span>
             </div>
             <img src="assets/images/contest-02.jpg" alt="">
-            <h4>Walk In The Nature Night</h4>
+            <h4>المشي في ليلة الطبيعة</h4>
             <div class="info">
-              <span class="participants"><img src="assets//images/icon-03.png" alt=""><br>60 Participants</span>
-              <span class="submittions"><img src="assets//images/icon-01.png" alt=""><br>212 Submissions</span>
+              <span class="participants"><img src="assets//images/icon-03.png" alt=""><br>60 مشاركون</span>
+              <span class="submittions"><img src="assets//images/icon-01.png" alt=""><br>212 التقديمات</span>
             </div>
-            <div class="border-button">
+            <div class="border-butto">
               <a href="#">تصفح مسابقات صور الطبيعة</a>
             </div>
-            <span class="info">* Client will pay via Online Payments</span>
+            <span class="info">* سيدفع العميل عن طريق المدفوعات عبر الإنترنت</span>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="contest-item">
             <div class="top-content">
-              <span class="award">Award Price</span>
+              <span class="award">سعر الجائزة</span>
               <span class="price">3,600</span>
             </div>
             <img src="assets/images/contest-03.jpg" alt="">
-            <h4>Walk In The Nature Night</h4>
+            <h4>المشي في ليلة الطبيعة</h4>
             <div class="info">
-              <span class="participants"><img src="assets//images/icon-03.png" alt=""><br>55 Participants</span>
-              <span class="submittions"><img src="assets//images/icon-01.png" alt=""><br>150 Submissions</span>
+              <span class="participants"><img src="assets//images/icon-03.png" alt=""><br>55 مشاركون</span>
+              <span class="submittions"><img src="assets//images/icon-01.png" alt=""><br>150 التقديمات</span>
             </div>
-            <div class="border-button">
+            <div class="border-butto">
               <a href="#">تصفح مسابقات صور الطبيعة</a>
             </div>
-            <span class="info">* Client will pay via Online Payments</span>
+            <span class="info">* سيدفع العميل عن طريق المدفوعات عبر الإنترنت</span>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="contest-item">
             <div class="top-content">
-              <span class="award">Award Price</span>
+              <span class="award">سعر الجائزة</span>
               <span class="price">4,800</span>
             </div>
             <img src="assets/images/contest-04.jpg" alt="">
-            <h4>Walk In The Nature Night</h4>
+            <h4>المشي في ليلة الطبيعة</h4>
             <div class="info">
-              <span class="participants"><img src="assets//images/icon-03.png" alt=""><br>40 Participants</span>
-              <span class="submittions"><img src="assets//images/icon-01.png" alt=""><br>120 Submissions</span>
+              <span class="participants"><img src="assets//images/icon-03.png" alt=""><br>40 مشاركون</span>
+              <span class="submittions"><img src="assets//images/icon-01.png" alt=""><br>120 التقديمات</span>
             </div>
-            <div class="border-button">
+            <div class="border-butto">
               <a href="#">تصفح مسابقات صور الطبيعة</a>
             </div>
-            <span class="info">* Client will pay via Online Payments</span>
+            <span class="info">* سيدفع العميل عن طريق المدفوعات عبر الإنترنت</span>
           </div>
         </div>
         <div class="col-lg-12">
