--- a/users.html
+++ b/users.html
@@ -72,99 +72,17 @@ https://templatemo.com/tm-576-Wanda X-photography
   </header>
   <!-- ***** Header Area End ***** -->
 
-  <div id="modal" class="popupContainer" style="display:none;">
-    <div class="popupHeader">
-        <span class="header_title">Login</span>
-        <span class="modal_close"><i class="fa fa-times"></i></span>
-    </div>
-
-    <section class="popupBody">
-        <!-- Social Login -->
-        <div class="social_login">
-            <div class="">
-                <a href="#" class="social_box fb">
-                    <span class="icon"><i class="fab fa-facebook"></i></span>
-                    <span class="icon_title">Connect with Facebook</span>
-
-                </a>
-
-                <a href="#" class="social_box google">
-                    <span class="icon"><i class="fab fa-google-plus"></i></span>
-                    <span class="icon_title">Connect with Google</span>
-                </a>
-            </div>
-
-            <div class="centeredText">
-                <span>Or use your Email address</span>
-            </div>
-
-            <div class="action_btns">
-                <div class="one_half"><a href="#" id="login_form" class="btn">Login</a></div>
-                <div class="one_half last"><a href="#" id="register_form" class="btn">Sign up</a></div>
-            </div>
-        </div>
-
-        <!-- Username & Password Login form -->
-        <div class="user_login">
-            <form action="" method="post">
-                <label>Email / Username</label>
-                <input name="username" type="text" id="username" />
-              <br />
-
-                <label>Password</label>
-                <input name="password" type="password" id="password" />
-              <br />
-
-                <div class="checkbox">
-                    <input id="remember" type="checkbox" />
-                    <label for="remember">Remember me on this computer</label>
-                </div>
-
-                <div class="action_btns">
-                    <div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a></div>
-                    <div class="one_half last"><button type="submit" class="btn btn_red">Login</button></div>
-                </div>
-            </form>
-
-            <a href="#" class="forgot_password">Forgot password?</a>
-        </div>
+  
 
         <!-- Register Form -->
-        <div class="user_register">
-            <form action="" method="post">
-                <label>Username</label>
-                <input name="username" type="text" id="username" />
-                <br />
 
-                <label>Email Address</label>
-                <input name="email" type="email" id="email" />
-                <br />
-
-                <label>Password</label>
-                <input name="password" type="password" id="password" />
-                <br />
-
-                <div class="checkbox">
-                    <input id="send_updates" type="checkbox" />
-                    <label for="send_updates">Send me occasional email updates</label>
-                </div>
-
-                <div class="action_btns">
-                    <div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a></div>
-                    <div class="one_half last"><button type="submit" class="btn btn_red">Register</button></div>
-                </div>
-            </form>
-        </div>
-        
-    </section>
-  </div>
 
   <div class="page-heading">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 offset-lg-2 header-text">
           <h2>عرض صور المستخدم و <em>تفاصيل المسابقة</em></h2>
-          <p>Lorem ipsum dolor  <a rel="nofollow" href="#" target="_blank">supportWaheed wael</a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatem reprehenderit possimus recusandae qui. Veritatis soluta sed fugiat harum, voluptatum qui quibE£am excepturi. Officiis deleniti laudantium porro, enim in minima.</p>
+          
         </div>
       </div>
     </div>
@@ -181,44 +99,44 @@ https://templatemo.com/tm-576-Wanda X-photography
         </div>
         <div class="col-lg-2 col-sm-6">
           <div class="info">
-            <h6>Rank</h6>
+            <h6>مرتبة</h6>
             <h4>#121</h4>
             <span>of 1680</span>
           </div>
         </div>
         <div class="col-lg-2 col-sm-6">
           <div class="info">
-            <h6>Ratings</h6>
+            <h6>تقيم</h6>
             <h4>4.56</h4>
-            <span>of 5.00 Stars</span>
+            <span> 5.00 نجوم</span>
           </div>
         </div>
         <div class="col-lg-2 col-sm-6">
           <div class="info">
-            <h6>Top Rated</h6>
-            <h4>Nature</h4>
-            <span>Picture Category</span>
+            <h6>أعلى التقييمات</h6>
+            <h4>طبيعة</h4>
+            <span>فئة الصورة</span>
           </div>
         </div>
         <div class="col-lg-2 col-sm-6">
           <div class="info">
-            <h6>Profile Views</h6>
+            <h6>مشاهدات الملف</h6>
             <h4>8,250</h4>
-            <span>Monthly</span>
+            <span>شهريا</span>
           </div>
         </div>
         <div class="col-lg-2 col-sm-6">
           <div class="info">
-            <h6>مسابقات Won</h6>
+            <h6>فاز بالمسابقات</h6>
             <h4>90</h4>
-            <span>of 12,400</span>
+            <span> 12,400</span>
           </div>
         </div>
         <div class="col-lg-2 col-sm-6">
           <div class="info">
-            <h6>Total Earned</h6>
+            <h6>إجمالي المكتسبة</h6>
             <h4>68,000</h4>
-            <span>All Time</span>
+            <span>كل الوقت</span>
           </div>
         </div>
       </div>
@@ -233,9 +151,9 @@ https://templatemo.com/tm-576-Wanda X-photography
             <img src="assets/images/portfolio-01.jpg" alt="">
             <div class="hover-effect">
               <div class="content">
-                <h4>Walk In the Beach</h4>
-                <span>Ranked: <em>2nd</em></span>
-                <span>Award Won: <em>None</em></span>
+                <h4>المشي في الشاطئ</h4>
+                <span>مرتبة: <em>الثاني</em></span>
+                <span>فاز بالجائزة: <em>لا أحد</em></span>
                 <ul>
                   <li><a href="#"><i class="fa fa-heart"></i></a></li>
                   <li><a href="#"><i class="fa fa-eye"></i></a></li>
@@ -249,9 +167,9 @@ https://templatemo.com/tm-576-Wanda X-photography
             <img src="assets/images/portfolio-02.jpg" alt="">
             <div class="hover-effect">
               <div class="content">
-                <h4>Walk In The Nature</h4>
-                <span>Ranked: <em>3rd</em></span>
-                <span>Award Won: <em>EOS R3</em></span>
+                <h4>المشي في الطبيعة</h4>
+                <span>مرتبة: <em>الثالث</em></span>
+                <span>فاز بالجائزة: <em>كاميرا EOS R3</em></span>
                 <ul>
                   <li><a href="#"><i class="fa fa-heart"></i></a></li>
                   <li><a href="#"><i class="fa fa-eye"></i></a></li>
@@ -265,9 +183,9 @@ https://templatemo.com/tm-576-Wanda X-photography
             <img src="assets/images/portfolio-03.jpg" alt="">
             <div class="hover-effect">
               <div class="content">
-                <h4>Walk In The Forest</h4>
-                <span>Ranked: <em>4th</em></span>
-                <span>Award: <em>EOS R7</em></span>
+                <h4>المشي في الغابة</h4>
+                <span>مرتبة: <em>الرابعة</em></span>
+                <span>جائزة: <em>كاميرا EOS R7</em></span>
                 <ul>
                   <li><a href="#"><i class="fa fa-heart"></i></a></li>
                   <li><a href="#"><i class="fa fa-eye"></i></a></li>
@@ -281,9 +199,9 @@ https://templatemo.com/tm-576-Wanda X-photography
             <img src="assets/images/portfolio-04.jpg" alt="">
             <div class="hover-effect">
               <div class="content">
-                <h4>Forest Nature</h4>
-                <span>Ranked: <em>2nd</em></span>
-                <span>Award: <em>EOS R3</em></span>
+                <h4>طبيعة الغابة</h4>
+                <span>مرتبة: <em>الثاني</em></span>
+                <span>جائزة: <em>كاميرا EOS R3</em></span>
                 <ul>
                   <li><a href="#"><i class="fa fa-heart"></i></a></li>
                   <li><a href="#"><i class="fa fa-eye"></i></a></li>
@@ -297,9 +215,9 @@ https://templatemo.com/tm-576-Wanda X-photography
             <img src="assets/images/portfolio-05.jpg" alt="">
             <div class="hover-effect">
               <div class="content">
-                <h4>Fly thru the river</h4>
-                <span>Ranked: <em>1st</em></span>
-                <span>Award: <em>EOS R1</em></span>
+                <h4>تطير عبر النهر</h4>
+                <span>مرتبة: <em>الأول</em></span>
+                <span>جائزة: <em>كاميرا EOS R1</em></span>
                 <ul>
                   <li><a href="#"><i class="fa fa-heart"></i></a></li>
                   <li><a href="#"><i class="fa fa-eye"></i></a></li>
@@ -313,9 +231,9 @@ https://templatemo.com/tm-576-Wanda X-photography
             <img src="assets/images/portfolio-06.jpg" alt="">
             <div class="hover-effect">
               <div class="content">
-                <h4>Rocky Mountain</h4>
-                <span>Ranked: <em>2nd</em></span>
-                <span>Award Won: <em>None</em></span>
+                <h4>جبل صخري</h4>
+                <span>مرتبة: <em>الثاني</em></span>
+                <span>فاز بالجائزة: <em>لا أحد</em></span>
                 <ul>
                   <li><a href="#"><i class="fa fa-heart"></i></a></li>
                   <li><a href="#"><i class="fa fa-eye"></i></a></li>
@@ -329,9 +247,9 @@ https://templatemo.com/tm-576-Wanda X-photography
             <img src="assets/images/portfolio-07.jpg" alt="">
             <div class="hover-effect">
               <div class="content">
-                <h4>Rocky Mountain . Part 2</h4>
-                <span>Ranked: <em>2nd</em></span>
-                <span>Award Won: <em>None</em></span>
+                <h4>جبل صخري . الجزء 2</h4>
+                <span>مرتبة: <em>الثاني</em></span>
+                <span>فاز بالجائزة: <em>لا أحد</em></span>
                 <ul>
                   <li><a href="#"><i class="fa fa-heart"></i></a></li>
                   <li><a href="#"><i class="fa fa-eye"></i></a></li>
@@ -345,9 +263,9 @@ https://templatemo.com/tm-576-Wanda X-photography
             <img src="assets/images/portfolio-08.jpg" alt="">
             <div class="hover-effect">
               <div class="content">
-                <h4>Blue Lake Nature</h4>
-                <span>Ranked: <em>4th</em></span>
-                <span>Award Won: <em>None</em></span>
+                <h4>طبيعة البحيرة الزرقاء</h4>
+                <span>مرتبة: <em>الرابعة</em></span>
+                <span>فاز بالجائزة: <em>لا أحد</em></span>
                 <ul>
                   <li><a href="#"><i class="fa fa-heart"></i></a></li>
                   <li><a href="#"><i class="fa fa-eye"></i></a></li>
@@ -361,9 +279,9 @@ https://templatemo.com/tm-576-Wanda X-photography
             <img src="assets/images/portfolio-09.jpg" alt="">
             <div class="hover-effect">
               <div class="content">
-                <h4>Walk In The Forest</h4>
-                <span>Ranked: <em>3rd</em></span>
-                <span>Award Won: <em>None</em></span>
+                <h4>المشي في الغابة</h4>
+                <span>مرتبة: <em>الثالث</em></span>
+                <span>فاز بالجائزة: <em>لا أحد</em></span>
                 <ul>
                   <li><a href="#"><i class="fa fa-heart"></i></a></li>
                   <li><a href="#"><i class="fa fa-eye"></i></a></li>
@@ -374,7 +292,7 @@ https://templatemo.com/tm-576-Wanda X-photography
         </div>
         <div class="col-lg-12">
           <div class="main-button">
-            <a href="#">Load More Photos</a>
+            <a href="#">تحميل المزيد من الصور</a>
           </div>
         </div>
       </div>
@@ -416,32 +334,32 @@ https://templatemo.com/tm-576-Wanda X-photography
             <div class="row">
               <div class="col-lg-6">
                 <fieldset>
-                  <input type="text" name="name" id="name" placeholder="Your Name..." autocomplete="on" required>
+                  <input type="text" name="name" id="name" placeholder="اسمك..." autocomplete="on" required>
                 </fieldset>
               </div>
               <div class="col-lg-6">
                 <fieldset>
-                  <input type="text" name="telephone" id="telephone" placeholder="Your Telephone..." autocomplete="on" required>
+                  <input type="text" name="telephone" id="telephone" placeholder="رقم الهاتف ..." autocomplete="on" required>
                 </fieldset>
               </div>
               <div class="col-lg-6">
                 <fieldset>
-                  <input type="email" name="email" id="email" placeholder="Your E-mail..." required="">
+                  <input type="email" name="email" id="email" placeholder="بريدك الالكتروني..." required="">
                 </fieldset>
               </div>
               <div class="col-lg-6">
                 <fieldset>
-                  <input type="text" name="subject" id="subject" placeholder="Subject..." autocomplete="on" >
+                  <input type="text" name="subject" id="subject" placeholder="الموضوع..." autocomplete="on" >
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                  <textarea name="message" id="message" placeholder="رسالتك"></textarea>
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <button type="submit" id="form-submit" class="orange-button">Send Message Now</button>
+                  <button type="submit" id="form-submit" class="orange-button">أرسل الرسالة الآن</button>
                 </fieldset>
               </div>
             </div>
