--- a/testimonial.html
+++ b/testimonial.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Restoranto - Bootstrap Restaurant Template</title>
+    <title>Restoranto </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
+    <link rel="shortcut icon" href="img/hero.png"  type="image/x-icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
