--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                 <div class="d-flex align-items-center border-start border-5 border-primary px-3">
                                     <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">15</h1>
                                     <div class="ps-4">
-                                        <p class="mb-0">سنوات من</p>
+                                        <p class="mb-0">سنة من</p>
                                         <h6 class="text-uppercase mb-0">خبرة</h6>
                                     </div>
                                 </div>
@@ -171,7 +171,7 @@
                                 <div class="d-flex align-items-center border-start border-5 border-primary px-3">
                                     <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">50</h1>
                                     <div class="ps-4">
-                                        <p class="mb-0">شائع</p>
+                                        <p class="mb-0">عدد</p>
                                         <h6 class="text-uppercase mb-0">كبار الطهاة</h6>
                                     </div>
                                 </div>
@@ -198,7 +198,7 @@
                             <a class="d-flex align-items-center text-start mx-3 ms-0 pb-3 active" data-bs-toggle="pill" href="#tab-1">
                                 <i class="fa fa-coffee fa-2x text-primary"></i>
                                 <div class="ps-3">
-                                    <small class="text-body">شائع</small>
+                                    <small class="text-body">عدد</small>
                                     <h6 class="mt-n1 mb-0">إفطار</h6>
                                 </div>
                             </a>
