--- a/menu.html
+++ b/menu.html
@@ -97,7 +97,7 @@
                             <a class="d-flex align-items-center text-start mx-3 ms-0 pb-3 active" data-bs-toggle="pill" href="#tab-1">
                                 <i class="fa fa-coffee fa-2x text-primary"></i>
                                 <div class="ps-3">
-                                    <small class="text-body">عدد</small>
+                                    <small class="text-body">فرد من</small>
                                     <h6 class="mt-n1 mb-0">إفطار</h6>
                                 </div>
                             </a>
