--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
                                     <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">15</h1>
                                     <div class="ps-4">
                                         <p class="mb-0">سنة من</p>
-                                        <h6 class="text-uppercase mb-0">خبرة</h6>
+                                        <h6 class="text-uppercase mb-0">الخبرة</h6>
                                     </div>
                                 </div>
                             </div>
@@ -123,7 +123,7 @@
                                 <div class="d-flex align-items-center border-start border-5 border-primary px-3">
                                     <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">50</h1>
                                     <div class="ps-4">
-                                        <p class="mb-0">عدد</p>
+                                        <p class="mb-0">فرد من</p>
                                         <h6 class="text-uppercase mb-0">كبار الطهاة</h6>
                                     </div>
                                 </div>
