--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0 pe-4">
-                        <a href="index.html" class="nav-item nav-link">المنزل</a>
+                        <a href="index.html" class="nav-item nav-link">الرئيسية</a>
                         <a href="about.html" class="nav-item nav-link active">عن</a>
                         <a href="service.html" class="nav-item nav-link">الخدمات</a>
                         <a href="menu.html" class="nav-item nav-link">القائمة</a>
@@ -73,7 +73,7 @@
                     <h1 class="display-3 text-white mb-3 animated slideInDown">معلومات عنا</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center text-uppercase">
-                            <li class="breadcrumb-item"><a href="#">المنزل</a></li>
+                            <li class="breadcrumb-item"><a href="#">الرئيسية</a></li>
                             <li class="breadcrumb-item"><a href="#">الصفحات</a></li>
                             <li class="breadcrumb-item text-white active" aria-current="page">عن</li>
                         </ol>
@@ -107,8 +107,8 @@
                     <div class="col-lg-6">
                         <h5 class="section-title ff-secondary text-start text-primary fw-normal">معلومات عنا</h5>
                         <h1 class="mb-4">مرحبا بك في<i class="fa fa-utensils text-primary me-2"></i>Restoranto</h1>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos erat ipsum et lorem et sit, sed stet lorem sit.</p>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                        <p class="mb-4">يسعدني أن أقدم لكم مقدمة مميزة لفتاح مطعمك الجديد. يعد فتح مطعم فرصة مثيرة للتعبير عن شغفك في تقديم الطعام وخدمة الزبائن. </p>
+                        <p class="mb-4">فهو يمثل فرصة لإظهار مهاراتك الإبداعية والمطبخية، وبناء سمعة قوية في مجال الضيافة. في هذه الفترة المقدمة، سوف نستعرض أهمية التخطيط والاستعداد الجيد</p>
                         <div class="row g-4 mb-4">
                             <div class="col-sm-6">
                                 <div class="d-flex align-items-center border-start border-5 border-primary px-3">
@@ -240,7 +240,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">النشرة الإخبارية</h4>
-                        <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                        <p>اشترك معنا في خدمتنا الاخبارية ليصلك كل جديد</p>
                         <div class="position-relative mx-auto" style="max-width: 400px;">
                             <input class="form-control border-primary w-100 py-3 ps-4 pe-5" type="text" placeholder="بريدك الالكتروني">
                             <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">اشتراك</button>
@@ -267,7 +267,7 @@
 
 
         <!-- Back to Top -->
-        <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+
     </div>
 
     <!-- JavaScript Libraries -->
