--- a/service.html
+++ b/service.html
@@ -50,7 +50,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0 pe-4">
-                        <a href="index.html" class="nav-item nav-link">المنزل</a>
+                        <a href="index.html" class="nav-item nav-link">الرئيسية</a>
                         <a href="about.html" class="nav-item nav-link">عن</a>
                         <a href="service.html" class="nav-item nav-link active">الخدمات</a>
                         <a href="menu.html" class="nav-item nav-link">القائمة</a>
@@ -73,7 +73,7 @@
                     <h1 class="display-3 text-white mb-3 animated slideInDown">الخدمات</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center text-uppercase">
-                            <li class="breadcrumb-item"><a href="#">المنزل</a></li>
+                            <li class="breadcrumb-item"><a href="#">الرئيسية</a></li>
                             <li class="breadcrumb-item"><a href="#">الصفحات</a></li>
                             <li class="breadcrumb-item text-white active" aria-current="page">الخدمات</li>
                         </ol>
@@ -97,7 +97,7 @@
                             <div class="p-4">
                                 <i class="fa fa-3x fa-user-tie text-primary mb-4"></i>
                                 <h5>كبار الطهاة</h5>
-                                <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                                <p>لدينا طهاه من اكبر الطهاة ع مستوي العالم نرحب بك </p>
                             </div>
                         </div>
                     </div>
@@ -106,7 +106,7 @@
                             <div class="p-4">
                                 <i class="fa fa-3x fa-utensils text-primary mb-4"></i>
                                 <h5>نوعية الغذاء</h5>
-                                <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                                <p>نقدم لك افضل انواع الغذاء واجود الانواع شرفنا بحضورك </p>
                             </div>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
                             <div class="p-4">
                                 <i class="fa fa-3x fa-cart-plus text-primary mb-4"></i>
                                 <h5>طلب الشراء عبر الإنترنت</h5>
-                                <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                                <p>اطلب من ع الانترنت من خلال موقعنا اتطلب الان</p>
                             </div>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
                             <div class="p-4">
                                 <i class="fa fa-3x fa-headset text-primary mb-4"></i>
                                 <h5>24/7 خدمة</h5>
-                                <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                                <p>خدماتنا ع مدار الاربعة والعشرون ساعة اطلب الان</p>
                             </div>
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                             <div class="p-4">
                                 <i class="fa fa-3x fa-user-tie text-primary mb-4"></i>
                                 <h5>كبار الطهاة</h5>
-                                <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                                <p>لدينا طهاه من اكبر الطهاة ع مستوي العالم نرحب بك </p>
                             </div>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                             <div class="p-4">
                                 <i class="fa fa-3x fa-utensils text-primary mb-4"></i>
                                 <h5>نوعية الغذاء</h5>
-                                <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                                <p>نقدم لك افضل انواع الغذاء واجود الانواع شرفنا بحضورك </p>
                             </div>
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                             <div class="p-4">
                                 <i class="fa fa-3x fa-cart-plus text-primary mb-4"></i>
                                 <h5>طلب الشراء عبر الإنترنت</h5>
-                                <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                                <p>اطلب من ع الانترنت من خلال موقعنا اتطلب الان</p>
                             </div>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                             <div class="p-4">
                                 <i class="fa fa-3x fa-headset text-primary mb-4"></i>
                                 <h5>24/7 خدمة</h5>
-                                <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                                <p>خدماتنا ع مدار الاربعة والعشرون ساعة اطلب الان</p>
                             </div>
                         </div>
                     </div>
@@ -203,7 +203,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">النشرة الإخبارية</h4>
-                        <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                        <p>اشترك معنا في خدمتنا الاخبارية ليصلك كل جديد</p>
                         <div class="position-relative mx-auto" style="max-width: 400px;">
                             <input class="form-control border-primary w-100 py-3 ps-4 pe-5" type="text" placeholder="بريدك الالكتروني">
                             <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">اشتراك</button>
@@ -230,7 +230,7 @@
 
 
         <!-- Back to Top -->
-        <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+
     </div>
 
     <!-- JavaScript Libraries -->
