--- a/testimonial.html
+++ b/testimonial.html
@@ -56,7 +56,7 @@
                         <a href="menu.html" class="nav-item nav-link">القائمة</a>
                         <div class="nav-item dropdown">
                             
-                            <div class="dropdown-menu m-0">
+                            <div class="dropdown-menu m-0" id="so">
                                 <a href="booking.html" class="dropdown-item">الحجزات</a>
                                 <a href="team.html" class="dropdown-item">فريقنا</a>
                                 <a href="testimonial.html" class="dropdown-item">شهادة</a>
